create and train MNIST CNN model

--- a/train.ipynb
+++ b/train.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "83912d25",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b894e2a5",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "    opt = torch.optim.AdamW(model.parameters(), lr=0.001)\n",
     "    trainloader, testloader = generate_dataloader()\n",
     "\n",
-    "    for epoch in range(3):\n",
+    "    for epoch in range(1):\n",
     "\n",
     "        model.train()\n",
     "        tloss = 0\n",
@@ -105,10 +105,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "dc98d0c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOSS train 0.23448356894999742 valid 0.09174059836391787 accuracy 0.97090\n",
+      "wrote model.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Model()\n",
+    "train_model(model)\n",
+    "export_model(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "229fc300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 97.09 %\n"
+     ]
+    }
+   ],
    "source": [
     "_, testloader = generate_dataloader()\n",
     "loss, acc = test_model(torch.load(\"model.pt\"), testloader)\n",
