export vanilla CNN model

--- a/export.ipynb
+++ b/export.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -66,14 +66,8 @@
     "    header = struct.pack(\"ii\", model.dim, model.nclass)\n",
     "    f.write(header) \n",
     "    # write the model weights and biases\n",
-    "    weights = [*[layer.weight for layer in model.layers], model.out.weight]\n",
-    "    bias = [*[layer.bias for layer in model.layers], model.out.bias]\n",
-    "    \n",
-    "    for w in weights:\n",
-    "        serialize_fp32(f, w)\n",
-    "    \n",
-    "    for b in bias:\n",
-    "        serialize_fp32(f, b)\n",
+    "    for p in model.parameters():\n",
+    "        serialize_fp32(f, p)\n",
     "\n",
     "    f.close()\n",
     "    print(f\"wrote {file_path}\")\n",
