--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b73b2ccc",
    "metadata": {},
    "outputs": [],
@@ -14,17 +14,15 @@
     "class Model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Model, self).__init__()\n",
-    "        dim = 128\n",
-    "        self.dim = dim\n",
-    "        self.nclass = 10\n",
+    "        self.nclasses = 10\n",
     "\n",
     "        self.conv1 = nn.Conv2d(1, 4, kernel_size=3, padding=1)\n",
     "        self.conv2 = nn.Conv2d(4, 8, kernel_size=3, padding=1)\n",
     "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(8*7*7, dim)\n",
-    "        self.fc2 = nn.Linear(dim, self.nclass)\n",
+    "        self.fc1 = nn.Linear(8*7*7, 128)\n",
+    "        self.fc2 = nn.Linear(128, self.nclasses)\n",
     "        self.relu = nn.ReLU()\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -62,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb854c3",
+   "id": "6fa98828",
    "metadata": {},
    "outputs": [],
    "source": []
