refactor model configuration and layer definitions
- Create LinearConfig and ConvConfig structs to represent the configuration of linear and convolutional layers.
- Read all parameters to a single array and access these using offset defined in layer structs.
- Update forward pass function to use the new layer configurations

--- a/export.ipynb
+++ b/export.ipynb
@@ -22,22 +22,22 @@
    "source": [
     "#|export\n",
     "def serialize_fp32(file, tensor):\n",
-    "    \"\"\" write one fp32 tensor to file that is open in wb mode \"\"\"\n",
+    "    ''' Write one fp32 tensor to file that is open in wb mode '''\n",
     "    d = tensor.detach().cpu().view(-1).to(torch.float32).numpy()\n",
     "    b = struct.pack(f'{len(d)}f', *d)\n",
     "    file.write(b)\n",
     "\n",
     "def serialize_int8(file, tensor):\n",
-    "    \"\"\" write one int8 tensor to file that is open in wb mode \"\"\"\n",
+    "    ''' Write one int8 tensor to file that is open in wb mode '''\n",
     "    d = tensor.detach().cpu().view(-1).numpy().astype(np.int8)\n",
     "    b = struct.pack(f'{len(d)}b', *d)\n",
     "    file.write(b)\n",
     "\n",
     "def quantize_q80(w, group_size):\n",
-    "    \"\"\"\n",
-    "    takes a tensor and returns the Q8_0 quantized version\n",
+    "    '''\n",
+    "    Take a tensor and returns the Q8_0 quantized version\n",
     "    i.e. symmetric quantization into int8, range [-127,127]\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    assert w.numel() % group_size == 0\n",
     "    ori_shape = w.shape\n",
     "    w = w.float() # convert to float32\n",
@@ -59,8 +59,14 @@
     "    maxerr = err.max().item()\n",
     "    return int8val, scale, maxerr\n",
     "\n",
-    "def export_model(model, file_path = \"model.bin\"):\n",
-    "    ''' export the model to filepath '''\n",
+    "def export_model(model, file_path=\"model.bin\"):\n",
+    "    '''\n",
+    "    Export the model to a file at the specified filepath\n",
+    "    The data inside the file follows this order:\n",
+    "    1. Number of classes, CNN layers, and FC layers.\n",
+    "    2. CNN and FC layers' configuration.\n",
+    "    3. CNN and FC layers' parameters.\n",
+    "    '''\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [model.conv1, model.conv2]\n",
