add module test for train

--- a/train.ipynb
+++ b/train.ipynb
@@ -18,30 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4a66b3ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/doyu/mambaforge/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: /home/doyu/mambaforge/lib/python3.9/site-packages/torchvision/image.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKSs\n",
+      "  warn(f\"Failed to load image Python extension: {e}\")\n"
+     ]
+    }
+   ],
    "source": [
     "#|export\n",
-    "import numpy as np\n",
     "import torchvision\n",
     "from torchvision import transforms\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "import matplotlib.pyplot as plt\n",
-    "import struct\n",
-    "import os\n",
-    "\n",
-    "from model import Model # my model\n",
-    "from export import export_model\n",
-    "from export import export_modelq8"
+    "from torch import nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "83912d25",
+   "execution_count": null,
+   "id": "ca6254f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b894e2a5",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
     "        for X,y in testloader:\n",
     "            out = model(X)\n",
     "            vloss += loss_fn(out, y).item()\n",
-    "            correct += (torch.argmax(out, 1)==y).float().sum()\n",
+    "            correct += (torch.argmax(out, 1)==y).float().sum().item()\n",
     "    \n",
     "    return vloss/len(testloader),  correct/len(testloader.dataset)\n",
     "\n",
@@ -105,7 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "f3cda315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import random\n",
+    "seed = 1337\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ebce92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainloader, testloader = generate_dataloader()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dc98d0c2",
    "metadata": {},
    "outputs": [
@@ -113,12 +137,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LOSS train 0.23448356894999742 valid 0.09174059836391787 accuracy 0.97090\n",
-      "wrote model.bin\n"
+      "LOSS train 0.26354814784054953 valid 0.0891189479771942 accuracy 0.97410\n",
+      "wrote model.bin\n",
+      "CPU times: user 1min, sys: 2.92 s, total: 1min 3s\n",
+      "Wall time: 10.5 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "from export import export_model\n",
+    "from model import Model\n",
+    "\n",
     "model = Model()\n",
     "train_model(model)\n",
     "export_model(model)"
@@ -126,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "229fc300",
    "metadata": {},
    "outputs": [
@@ -134,42 +164,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.09 %\n"
+      "Loss: 0.0891 Accuracy: 97.41 %\n"
      ]
     }
    ],
    "source": [
-    "_, testloader = generate_dataloader()\n",
     "loss, acc = test_model(torch.load(\"model.pt\"), testloader)\n",
-    "print(\"Accuracy: {:.2f} %\".format(100*acc))"
+    "print(f\"Loss: {loss:.4f} Accuracy: {100*acc:.2f} %\")\n",
+    "\n",
+    "assert loss - 0.0891 < 0.0001\n",
+    "assert acc - 0.97410 < 0.00001"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e18214fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.0"
   }
  },
  "nbformat": 4,
