add FIXME comment to implment unit tests for .ipynb

--- a/train.ipynb
+++ b/train.ipynb
@@ -139,8 +139,8 @@
      "text": [
       "LOSS train 0.26354814784054953 valid 0.0891189479771942 accuracy 0.97410\n",
       "wrote model.bin\n",
-      "CPU times: user 1min, sys: 2.92 s, total: 1min 3s\n",
-      "Wall time: 10.5 s\n"
+      "CPU times: user 1min 3s, sys: 3.21 s, total: 1min 7s\n",
+      "Wall time: 11.2 s\n"
      ]
     }
    ],
@@ -169,6 +169,8 @@
     }
    ],
    "source": [
+    "# Tests for the above function(s)\n",
+    "\n",
     "loss, acc = test_model(torch.load(\"model.pt\"), testloader)\n",
     "print(f\"Loss: {loss:.4f} Accuracy: {100*acc:.2f} %\")\n",
     "\n",
