--- a/model.ipynb
+++ b/model.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b73b2ccc",
+   "execution_count": null,
+   "id": "2a939d4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "import torch\n",
-    "from torch import nn\n",
-    "\n",
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73b2ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "class Model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Model, self).__init__()\n",
@@ -39,50 +48,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e47fbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "62bf38bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 10])\n"
+     ]
+    }
+   ],
    "source": [
-    "output = model(torch.rand([1,28,28]))\n",
+    "# Tests for the above function(s)\n",
+    "model = Model()\n",
+    "output = model(torch.rand([1, 1,28,28]))\n",
     "assert output.shape==(1,10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fa98828",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.0"
   }
  },
  "nbformat": 4,
