add unit tests for export

--- a/export.ipynb
+++ b/export.ipynb
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f18915",
+   "id": "d0e6ba55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,53 @@
     "    ''' Write one int8 tensor to file that is open in wb mode '''\n",
     "    d = tensor.detach().cpu().view(-1).numpy().astype(np.int8)\n",
     "    b = struct.pack(f'{len(d)}b', *d)\n",
-    "    file.write(b)\n",
+    "    file.write(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0608e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unit test for serialize_fp32 & serialize_int8\n",
+    "fname = '.test.bin'\n",
     "\n",
+    "# Unit test for serialize_fp32\n",
+    "def test_serialize_fp32(fname):\n",
+    "    a = torch.randn(2,3)\n",
+    "    with open(fname, 'wb') as f:\n",
+    "        serialize_fp32(f, a)\n",
+    "    with open(fname, 'rb') as f:\n",
+    "        x = f.read()\n",
+    "    b = torch.tensor(struct.unpack(f'6f', x)).reshape(2,3)\n",
+    "    assert (a==b).all()\n",
+    "    \n",
+    "test_serialize_fp32(fname)\n",
+    "\n",
+    "\n",
+    "# Unit test for serialize_int8\n",
+    "def test_serialize_int8(fname):\n",
+    "    a = torch.tensor([[0,1,2],[3,4,5]], dtype=torch.int8)\n",
+    "    with open(fname, 'wb') as f:\n",
+    "        serialize_int8(f, a)\n",
+    "    with open(fname, 'rb') as f:\n",
+    "        x = f.read()\n",
+    "    b = torch.tensor(struct.unpack(f'6b', x)).reshape(2,3)\n",
+    "    assert (a==b).all()\n",
+    "    \n",
+    "test_serialize_int8(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbcaf24d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "def quantize_q80(w, group_size):\n",
     "    '''\n",
     "    Take a tensor and returns the Q8_0 quantized version\n",
@@ -57,8 +102,34 @@
     "    err = torch.abs(fp32valr - w).max(dim=1).values\n",
     "    # find the max error across all groups\n",
     "    maxerr = err.max().item()\n",
-    "    return int8val, scale, maxerr\n",
-    "\n",
+    "    return int8val, scale, maxerr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6094b4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unit test for quantize_q80\n",
+    "def test_quantize_q80():\n",
+    "    w0 = torch.tensor([0,1,2,3], dtype=torch.float32)\n",
+    "    w1, scale, err = quantize_q80(w0, 2)\n",
+    "    assert (w1==torch.tensor([0,127,85,127], dtype=torch.int8).reshape(2,2)).all()\n",
+    "    #FIXME: check scale & err too?\n",
+    "    \n",
+    "test_quantize_q80()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96118cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "def export_model(model, file_path=\"model.bin\"):\n",
     "    '''\n",
     "    Export the model to a file at the specified filepath\n",
@@ -99,8 +170,29 @@
     "    f.close()\n",
     "    print(f\"wrote {file_path}\")\n",
     "    \n",
-    "    torch.save(model, \"model.pt\") # for loading in python\n",
-    "\n",
+    "    torch.save(model, \"model.pt\") # for loading in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e0a2d6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIXME: Unit test for export_model()\n",
+    "# def test_export_model():\n",
+    "#    model = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f18915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "def export_modelq8(model_path=\"model.pt\", file_path=\"modelq8.bin\", gs=64):\n",
     "    ''' read a model from model.bin if not given and export a quatized (int8) model to filepath '''\n",
     "    model = torch.load(model_path)\n",
@@ -140,8 +232,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME: add some tests for the above function(s)\n",
-    "assert True"
+    "# FIXME: Unit test for export_modelq8()\n",
+    "def test_export_modelq8():\n",
+    "    #model = \n",
+    "    assert True\n",
+    "    \n",
+    "test_export_modelq8()"
    ]
   }
  ],
