add utest for export_model

--- a/export.ipynb
+++ b/export.ipynb
@@ -16,7 +16,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e6ba55",
+   "id": "98446256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "seed = 1337\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0608e0",
+   "id": "74840945",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbcaf24d",
+   "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6094b4d",
+   "id": "76139411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96118cb6",
+   "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,13 +189,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e0a2d6c",
+   "id": "fdbbe72d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote /tmp/.test.bin\n"
+     ]
+    }
+   ],
    "source": [
-    "# FIXME: Unit test for export_model()\n",
-    "# def test_export_model():\n",
-    "#    model = "
+    "# Unit test for export_model()\n",
+    "import os\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class TestModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(TestModel, self).__init__()\n",
+    "        self.nclasses = 4\n",
+    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
+    "        self.fc1 = nn.Linear(3, 2)\n",
+    "        self.fc2 = nn.Linear(2, 1)\n",
+    "\n",
+    "m = TestModel()\n",
+    "\n",
+    "def test_export_model():\n",
+    "    fname = '/tmp/.test.bin'\n",
+    "    export_model(m, fname)\n",
+    "    assert os.path.getsize(fname)==208 # manucally calc from export_model()\n",
+    "\n",
+    "test_export_model()"
    ]
   },
   {
