--- a/export.ipynb
+++ b/export.ipynb
@@ -157,18 +157,18 @@
     "    nconv = len(conv_layers)\n",
     "    linear_layers = [model.fc1, model.fc2]\n",
     "    nlinear = len(linear_layers)\n",
-    "    header = struct.pack(\"bbb\", model.nclasses, nconv, nlinear)\n",
+    "    header = struct.pack(\"iii\", model.nclasses, nconv, nlinear)\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    offset = 0 # the number of bytes in float32 (i.e. offset 1 = 4 bytes)\n",
     "    for layer in conv_layers:\n",
-    "        f.write(struct.pack(\"6b\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
+    "        f.write(struct.pack(\"6i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
     "                layer.in_channels, layer.out_channels, offset))\n",
     "        # set offset to the start of next layer\n",
     "        offset += layer.out_channels*layer.in_channels*layer.kernel_size[0]**2 + layer.out_channels\n",
     "\n",
     "    for layer in linear_layers:\n",
-    "        f.write(struct.pack(\"3b\", layer.in_features, layer.out_features, offset))\n",
+    "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
     "        offset += layer.in_features*layer.out_features + layer.out_features\n",
     "\n",
     "    # write the weights and biases of the model\n",
@@ -191,7 +191,15 @@
    "execution_count": null,
    "id": "fdbbe72d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote /tmp/.test.bin\n"
+     ]
+    }
+   ],
    "source": [
     "# Unit test for export_model()\n",
     "import os\n",
@@ -211,7 +219,7 @@
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    export_model(m, fname)\n",
-    "    assert os.path.getsize(fname)==145 # manucally calc from export_model()\n",
+    "    assert os.path.getsize(fname)==208 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
