write quantized CNN model
File format is similar to export_model. I only added a few features: the number of parameters in the model, group sizes for each layer's weigths and biases, offsets for scaling factors and scaling factors to the end of file.

The group size varies for different parameters, being calculated individually for each layer's weights and biases based on their respective sizes. By default, the group size is set to 64. If the dimension of specific parameters is less than 64, the group size will be set to that dimension. If the dimension is greater than 64 but not a multiple of 64, the group size will be set to the factor of the dimension that is closest to 64.

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "#|export\n",
     "import torch\n",
     "import struct\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sympy import divisors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -145,9 +146,9 @@
     "#|export\n",
     "def export_model(model, file_path=\"model.bin\"):\n",
     "    '''\n",
-    "    Export the model to a file at the specified filepath\n",
+    "    Export the model to a file\n",
     "    The data inside the file follows this order:\n",
-    "    1. Number of classes, CNN layers, and FC layers.\n",
+    "    1. The number of classes, CNN layers, and FC layers.\n",
     "    2. CNN and FC layers' configuration.\n",
     "    3. CNN and FC layers' parameters.\n",
     "    '''\n",
@@ -165,11 +166,11 @@
     "        f.write(struct.pack(\"6i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
     "                layer.in_channels, layer.out_channels, offset))\n",
     "        # set offset to the start of next layer\n",
-    "        offset += layer.out_channels*layer.in_channels*layer.kernel_size[0]**2 + layer.out_channels\n",
+    "        offset += layer.out_channels * layer.in_channels * layer.kernel_size[0]**2 + layer.out_channels\n",
     "\n",
     "    for layer in linear_layers:\n",
     "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
-    "        offset += layer.in_features*layer.out_features + layer.out_features\n",
+    "        offset += layer.in_features * layer.out_features + layer.out_features\n",
     "\n",
     "    # write the weights and biases of the model\n",
     "    for layer in conv_layers:\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -226,36 +227,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
+    "def calculate_groupsize(dim, gs):\n",
+    "    '''\n",
+    "    Change the group size if dimension is smaller, and adjust if dim is not a\n",
+    "    multiple of group size. Otherewise it remains the same.\n",
+    "    '''\n",
+    "    if dim < gs:\n",
+    "        return dim\n",
+    "    elif  dim % gs == 0:\n",
+    "        return gs\n",
+    "    else:\n",
+    "        factors = list(divisors(dim)) # give the factors of number \"dim\"\n",
+    "        return min(factors, key=lambda x: abs(x - gs)) # find the closest number to group size\n",
+    "\n",
     "def export_modelq8(model_path=\"model.pt\", file_path=\"modelq8.bin\", gs=64):\n",
-    "    ''' read a model from model.bin if not given and export a quatized (int8) model to filepath '''\n",
+    "    '''\n",
+    "    Export the quantized model to a file\n",
+    "    The data inside the file follows this order:\n",
+    "    1. The number of classes, CNN layers, and FC layers, parameters.\n",
+    "    2. CNN and FC layers' configuration.\n",
+    "    3. CNN and FC layers' quantized parameters.\n",
+    "    4. CNN and FC layers' scaling factors.\n",
+    "    '''\n",
     "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
-    "    # write the model structure \n",
-    "    header = struct.pack(\"iii\", model.dim, model.nclasses, gs)\n",
-    "    f.write(header) \n",
-    "    # quantize and write the model weights and biases\n",
-    "    weights = [*[layer.weight for layer in model.layers], model.out.weight]\n",
-    "    biases = [*[layer.bias for layer in model.layers], model.out.bias]\n",
-    "    params = [*weights, *biases]\n",
+    "    # write model config\n",
+    "    conv_layers = [model.conv1, model.conv2]\n",
+    "    nconv = len(conv_layers)\n",
+    "    linear_layers = [model.fc1, model.fc2]\n",
+    "    nlinear = len(linear_layers)\n",
+    "    nparameters = sum(p.numel() for p in model.parameters())\n",
+    "    header = struct.pack(\"4i\", model.nclasses, nconv, nlinear, nparameters)\n",
+    "    f.write(header)\n",
+    "    # write layers' config\n",
+    "    qoffset = 0 # offset for quantized parameters\n",
+    "    soffset = 0 # offset for scaling factors\n",
+    "    group_sizes = [] # save group sizes of each layer\n",
+    "    for layer in conv_layers:\n",
+    "        # calculates group sizes for weights and biases\n",
+    "        gs_weight = calculate_groupsize(layer.in_channels * layer.kernel_size[0]**2, gs)\n",
+    "        gs_bias = calculate_groupsize(layer.out_channels, gs)\n",
+    "        group_sizes.append(gs_weight)\n",
+    "        group_sizes.append(gs_bias)\n",
+    "\n",
+    "        f.write(struct.pack(\"9i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
+    "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
+    "        # set offsets to the start of next layer\n",
+    "        nweights = layer.out_channels * layer.in_channels * layer.kernel_size[0]**2\n",
+    "        qoffset += nweights + layer.out_channels\n",
+    "        soffset += nweights // gs_weight + layer.out_channels // gs_bias\n",
+    "\n",
+    "    for layer in linear_layers:\n",
+    "        gs_weight = calculate_groupsize(layer.in_features, gs)\n",
+    "        gs_bias = calculate_groupsize(layer.out_features, gs)\n",
+    "        group_sizes.append(gs_weight)\n",
+    "        group_sizes.append(gs_bias)\n",
+    "\n",
+    "        f.write(struct.pack(\"6i\", layer.in_features, layer.out_features, qoffset, soffset,\n",
+    "                            gs_weight, gs_bias))\n",
+    "\n",
+    "        nweights = layer.in_features * layer.out_features\n",
+    "        qoffset += nweights + layer.out_features\n",
+    "        soffset += nweights // gs_weight + layer.out_features // gs_bias\n",
     "\n",
     "    ew = []\n",
-    "    for i, p in enumerate(params):\n",
-    "        if i==len(params)-1 and gs>model.nclasses:\n",
-    "            gs = model.nclasses\n",
-    "        # quantize this weight\n",
-    "        q, s, err = quantize_q80(p, gs)\n",
-    "        # save the int8 weights to file\n",
-    "        serialize_int8(f, q) # save the tensor in int8\n",
+    "    scaling_factors = []\n",
+    "    i = 0\n",
+    "    for layer in [*conv_layers, *linear_layers]:\n",
+    "        for p in layer.parameters():\n",
+    "            q, s, err = quantize_q80(p, group_sizes[i])\n",
+    "            serialize_int8(f, q) # save the tensor in int8\n",
+    "            scaling_factors.append(s)\n",
+    "            ew.append((err, p.shape))\n",
+    "            i += 1\n",
+    "            print(f\"Quantized {tuple(p.shape)} to Q8_0 with max error {err}\")\n",
+    "\n",
+    "    for s in scaling_factors:\n",
     "        serialize_fp32(f, s) # save scale factors\n",
-    "        # logging\n",
-    "        ew.append((err, p.shape))\n",
-    "        print(f\"{i+1}/{len(params)} quantized {tuple(p.shape)} to Q8_0 with max error {err}\")\n",
     "\n",
     "    # print the highest error across all parameters, should be very small, e.g. O(~0.001)\n",
     "    ew.sort(reverse=True)\n",
@@ -266,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [],
@@ -282,9 +336,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
