--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -56,19 +56,19 @@
     "    # retrieve reference values using Python model\n",
     "    model = torch.load(\"model.pt\")\n",
     "    with open(file_path, \"rb\") as f:\n",
-    "        image = torch.tensor(struct.unpack('B'*(28*28), f.read(28*28))).view(1,28,28)\n",
+    "        image = torch.tensor(struct.unpack('B'*(28*28), f.read(28*28))).view(1,1,28,28)\n",
     "        image = ((image/255 - 0.5) / 0.5)\n",
     "        ref = model(image).detach()\n",
     "        ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output\n",
     "\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
     "    assert np.allclose(res1, ref, atol=1e-5, rtol=0), \"runq.c (group size = 1): Probabilities are not close.\"\n",
-    "    assert np.allclose(res2, ref, atol=1e-2, rtol=0), \"runq.c (group size = 2):Probabilities are not close.\"\n"
+    "    assert np.allclose(res2, ref, atol=1e-2, rtol=0), \"runq.c (group size = 2):Probabilities are not close.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
@@ -76,21 +76,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/6 quantized (128, 784) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "2/6 quantized (64, 128) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "3/6 quantized (10, 64) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "4/6 quantized (128,) to Q8_0 with max error 0.0\n",
-      "5/6 quantized (64,) to Q8_0 with max error 0.0\n",
-      "6/6 quantized (10,) to Q8_0 with max error 0.0\n",
+      "Quantized (4, 1, 3, 3) to Q8_0 with max error 0.0\n",
+      "Quantized (4,) to Q8_0 with max error 0.0\n",
+      "Quantized (8, 4, 3, 3) to Q8_0 with max error 0.0\n",
+      "Quantized (8,) to Q8_0 with max error 0.0\n",
+      "Quantized (128, 392) to Q8_0 with max error 1.4901161193847656e-08\n",
+      "Quantized (128,) to Q8_0 with max error 0.0\n",
+      "Quantized (10, 128) to Q8_0 with max error 1.4901161193847656e-08\n",
+      "Quantized (10,) to Q8_0 with max error 0.0\n",
       "max quantization group error across all weights: 1.4901161193847656e-08\n",
       "wrote modelq8_1.bin\n",
-      "1/6 quantized (128, 784) to Q8_0 with max error 0.0020293593406677246\n",
-      "2/6 quantized (64, 128) to Q8_0 with max error 0.0012124329805374146\n",
-      "3/6 quantized (10, 64) to Q8_0 with max error 0.001565396785736084\n",
-      "4/6 quantized (128,) to Q8_0 with max error 0.0001729782670736313\n",
-      "5/6 quantized (64,) to Q8_0 with max error 0.00040780549170449376\n",
-      "6/6 quantized (10,) to Q8_0 with max error 0.00028267502784729004\n",
-      "max quantization group error across all weights: 0.0020293593406677246\n",
+      "Quantized (4, 1, 3, 3) to Q8_0 with max error 0.0\n",
+      "Quantized (4,) to Q8_0 with max error 0.0004273931263014674\n",
+      "Quantized (8, 4, 3, 3) to Q8_0 with max error 0.0014624577015638351\n",
+      "Quantized (8,) to Q8_0 with max error 0.0003366917371749878\n",
+      "Quantized (128, 392) to Q8_0 with max error 0.0011674314737319946\n",
+      "Quantized (128,) to Q8_0 with max error 0.00028119422495365143\n",
+      "Quantized (10, 128) to Q8_0 with max error 0.001100301742553711\n",
+      "Quantized (10,) to Q8_0 with max error 0.00023248419165611267\n",
+      "max quantization group error across all weights: 0.0014624577015638351\n",
       "wrote modelq8_2.bin\n"
      ]
     }
@@ -102,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f291f26",
+   "id": "f876007f",
    "metadata": {},
    "outputs": [],
    "source": []
