--- a/export.ipynb
+++ b/export.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 18,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -320,18 +320,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "id": "8e696dc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote /tmp/.test.bin\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 3.725290298461914e-09\n",
+      "Quantized (1,) to Q8_0 with max error 0.0\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
+      "Quantized (1,) to Q8_0 with max error 0.0\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0\n",
+      "Quantized (2,) to Q8_0 with max error 0.0\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0\n",
+      "Quantized (1,) to Q8_0 with max error 0.0\n",
+      "max quantization group error across all weights: 1.4901161193847656e-08\n",
+      "wrote /tmp/.test.bin\n"
+     ]
+    }
+   ],
    "source": [
-    "# FIXME: Unit test for export_modelq8()\n",
-    "def test_export_modelq8():\n",
-    "    #model = \n",
-    "    assert True\n",
+    "# Unit test for calculate_groupsize()\n",
+    "def test_calculate_groupsize():\n",
+    "    assert calculate_groupsize(4, 8)==4\n",
+    "    assert calculate_groupsize(8, 4)==4\n",
+    "    assert calculate_groupsize(9, 4)==3\n",
     "    \n",
+    "test_calculate_groupsize()\n",
+    "\n",
+    "# Unit test for export_modelq8()\n",
+    "def test_export_modelq8():\n",
+    "    fname = '/tmp/.test.bin'\n",
+    "    test_export_model()\n",
+    "    export_modelq8(file_path=fname, gs=1)\n",
+    "    assert os.path.getsize(fname)==291\n",
+    "\n",
     "test_export_modelq8()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be9d2dea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
