add workflow artifacts property to store outputs in workflow test

--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -26,32 +26,39 @@
     "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
     "\n",
     "    file_path = \"test/data/MNIST/sorted/7/1012\"\n",
-    "    \n",
+    "    d = \"test_outputs\"\n",
+    "    os.makedirs(d, exist_ok=True)\n",
     "    # run vanilla model in test mode\n",
+    "    err = os.path.join(d, 'err.txt')\n",
+    "    stdout = os.path.join(d, 'stdout.txt')\n",
     "    command = [\"./run\", \"model.bin\", file_path]\n",
-    "    with open('err.txt', mode='w') as fe:\n",
-    "        with open('stdout.txt', mode='w') as fo:\n",
+    "    with open(err, mode='w') as fe:\n",
+    "        with open(stdout, mode='w') as fo:\n",
     "            proc = subprocess.Popen(command, stdout=fo, stderr=fe)\n",
     "            proc.wait()\n",
-    "    res = np.loadtxt(\"stdout.txt\")\n",
+    "    res = np.loadtxt(stdout)\n",
     "\n",
     "    # run quantized model test with group size = 1 in test mode\n",
+    "    err1 = os.path.join(d, 'err1.txt')\n",
+    "    stdout1 = os.path.join(d, 'stdout1.txt')\n",
     "    export_modelq8(file_path=\"modelq8_1.bin\", gs=1)\n",
     "    command = [\"./runq\", \"modelq8_1.bin\", file_path]\n",
-    "    with open('err1.txt', mode='w') as fe:\n",
-    "        with open('stdout1.txt', mode='w') as fo:\n",
+    "    with open(err1, mode='w') as fe:\n",
+    "        with open(stdout1, mode='w') as fo:\n",
     "            proc = subprocess.Popen(command, stdout=fo, stderr=fe)\n",
     "            proc.wait()\n",
-    "    res1 = np.loadtxt(\"stdout1.txt\")\n",
+    "    res1 = np.loadtxt(stdout1)\n",
     "\n",
     "    # run quantized model test with group size = 1 in test mode\n",
+    "    err2 = os.path.join(d, 'err2.txt')\n",
+    "    stdout2 = os.path.join(d, 'stdout2.txt')\n",
     "    export_modelq8(file_path=\"modelq8_2.bin\", gs=2)\n",
     "    command = [\"./runq\", \"modelq8_2.bin\", file_path]\n",
-    "    with open('err2.txt', mode='w') as fe:\n",
-    "        with open('stdout2.txt', mode='w') as fo:\n",
+    "    with open(err2, mode='w') as fe:\n",
+    "        with open(stdout2, mode='w') as fo:\n",
     "            proc = subprocess.Popen(command, stdout=fo, stderr=fe)\n",
     "            proc.wait()\n",
-    "    res2 = np.loadtxt(\"stdout2.txt\")\n",
+    "    res2 = np.loadtxt(stdout2)\n",
     "\n",
     "    # retrieve reference values using Python model\n",
     "    model = torch.load(\"model.pt\")\n",
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
