fix: fixed batchnorm export

--- a/export.ipynb
+++ b/export.ipynb
@@ -89,7 +89,7 @@
     "    for layer in bn_layers:\n",
     "        f.write(struct.pack(\"2i\", layer.num_features, offset))\n",
     "        # set offset to the start of next layer\n",
-    "        offset += layer.num_features*layer.num_features + layer.num_features\n",
+    "        offset += layer.num_features + layer.num_features\n",
     "\n",
     "    for layer in linear_layers:\n",
     "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
