--- a/train.ipynb
+++ b/train.ipynb
@@ -571,8 +571,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4c9f0784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
+    "bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "print(conv_layers[0].kernel_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e5bc18b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def im2col(input_data, kernel_size, stride, padding):\n",
+    "    # Add padding to the input data\n",
+    "    padded_data = np.pad(input_data, \n",
+    "                         ((padding, padding), (padding, padding), (0, 0)), \n",
+    "                         mode='constant')\n",
+    "\n",
+    "    # Calculate the output dimensions\n",
+    "    out_height = (input_data.shape[0] + 2*padding - kernel_size) // stride + 1\n",
+    "    out_width = (input_data.shape[1] + 2*padding - kernel_size) // stride + 1\n",
+    "\n",
+    "    # Initialize the output matrix\n",
+    "    col = np.zeros((kernel_size, kernel_size, input_data.shape[2], out_height, out_width))\n",
+    "\n",
+    "    # Fill the output matrix\n",
+    "    for y in range(kernel_size):\n",
+    "        y_max = y + stride * out_height\n",
+    "        for x in range(kernel_size):\n",
+    "            x_max = x + stride * out_width\n",
+    "            col[y, x, :, :, :] = padded_data[y:y_max:stride, x:x_max:stride, :]\n",
+    "\n",
+    "    # Reshape and return\n",
+    "    col = col.transpose(3, 4, 2, 0, 1).reshape(out_height * out_width, -1)\n",
+    "    return col\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2cdf464b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Parameter containing:\n",
+      "tensor([-0.0499, -0.0008, -0.0515, -0.0151, -0.0864, -0.0439, -0.0378, -0.0170,\n",
+      "        -0.0254, -0.0166, -0.0085, -0.0161, -0.0053, -0.0576, -0.0940, -0.0239,\n",
+      "        -0.0396, -0.0609, -0.0556, -0.0049, -0.0682, -0.0565, -0.0401, -0.0474,\n",
+      "         0.0032, -0.0222, -0.0807, -0.0333, -0.0486, -0.0317, -0.0060, -0.0279,\n",
+      "         0.0092, -0.0661, -0.0780, -0.0298, -0.0635, -0.0125, -0.0466, -0.0136,\n",
+      "        -0.0908, -0.0045, -0.0535,  0.0005, -0.0341,  0.0093, -0.0396, -0.0222,\n",
+      "        -0.0413, -0.0508, -0.0523,  0.0010, -0.0185, -0.0681, -0.0579,  0.0007,\n",
+      "        -0.0106, -0.0309, -0.0533, -0.0214, -0.0542, -0.0072, -0.0115, -0.0345],\n",
+      "       requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#col = im2col(conv_layers[0].weight.detach(), conv_layers[0].kernel_size[0], conv_layers[0].stride, conv_layers[0].padding[0])\n",
+    "print(conv_layers[0].padding[0])\n",
+    "unfold = torch.nn.Unfold(kernel_size=conv_layers[0].kernel_size[0], stride=conv_layers[0].stride, padding=conv_layers[0].padding[0])\n",
+    "col = unfold(conv_layers[0].weight.detach())\n",
+    "print(bn_layers[3].bias)\n",
+    "#print(col[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ccb783f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bn_layers[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00b8a30e",
    "metadata": {},
    "outputs": [],
    "source": []
