update export file from CNN to ResNet

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -144,21 +144,19 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "def export_model(model, file_path=\"model.bin\"):\n",
-    "    '''\n",
-    "    Export the model to a file\n",
-    "    The data inside the file follows this order:\n",
-    "    1. The number of classes, CNN layers, and FC layers.\n",
-    "    2. CNN and FC layers' configuration.\n",
-    "    3. CNN and FC layers' parameters.\n",
-    "    '''\n",
+    "def export_model(model, file_path = \"model.bin\"):\n",
+    "    ''' Export the model to filepath '''\n",
     "    f = open(file_path, \"wb\")\n",
+    "\n",
     "    # write model config\n",
-    "    conv_layers = [model.conv1, model.conv2]\n",
-    "    nconv = len(conv_layers)\n",
-    "    linear_layers = [model.fc1, model.fc2]\n",
+    "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
+    "    n_conv = len(conv_layers)\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    n_bn = len(bn_layers)\n",
+    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
-    "    header = struct.pack(\"iii\", model.nclasses, nconv, nlinear)\n",
+    "    n_classes = 10\n",
+    "    header = struct.pack(\"iiii\", n_classes, n_conv, n_bn, nlinear)\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    offset = 0 # the number of bytes in float32 (i.e. offset 1 = 4 bytes)\n",
@@ -166,7 +164,17 @@
     "        f.write(struct.pack(\"6i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
     "                layer.in_channels, layer.out_channels, offset))\n",
     "        # set offset to the start of next layer\n",
-    "        offset += layer.out_channels * layer.in_channels * layer.kernel_size[0]**2 + layer.out_channels\n",
+    "        t_offset =  layer.out_channels*layer.in_channels*layer.kernel_size[0]**2\n",
+    "        # Check if the layer has a bias term and adjust the offset accordingly\n",
+    "        if layer.bias is not None:\n",
+    "            offset += t_offset + layer.out_channels  # Include biases in the offset\n",
+    "        else:\n",
+    "            offset += t_offset  # No biases\n",
+    "\n",
+    "    for layer in bn_layers:\n",
+    "        f.write(struct.pack(\"2i\", layer.num_features, offset))\n",
+    "        # set offset to the start of next layer\n",
+    "        offset += layer.num_features + layer.num_features\n",
     "\n",
     "    for layer in linear_layers:\n",
     "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
@@ -174,6 +182,10 @@
     "\n",
     "    # write the weights and biases of the model\n",
     "    for layer in conv_layers:\n",
+    "        for p in layer.parameters():\n",
+    "            serialize_fp32(f, p)\n",
+    "    \n",
+    "    for layer in bn_layers:\n",
     "        for p in layer.parameters():\n",
     "            serialize_fp32(f, p)\n",
     "\n",
