feat: batchnorm working

--- a/export.ipynb
+++ b/export.ipynb
@@ -89,7 +89,8 @@
     "    for layer in bn_layers:\n",
     "        f.write(struct.pack(\"2i\", layer.num_features, offset))\n",
     "        # set offset to the start of next layer\n",
-    "        offset += layer.num_features + layer.num_features\n",
+    "        # weight, bias, running_mean, running_var\n",
+    "        offset += 4 * layer.num_features\n",
     "\n",
     "    for layer in linear_layers:\n",
     "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
@@ -103,6 +104,9 @@
     "    for layer in bn_layers:\n",
     "        for p in layer.parameters():\n",
     "            serialize_fp32(f, p)\n",
+    "        serialize_fp32(f, layer.running_mean)\n",
+    "        serialize_fp32(f, layer.running_var)\n",
+    "        \n",
     "\n",
     "    for layer in linear_layers:\n",
     "        for p in layer.parameters():\n",
